Added service_code to model. Added more tests.